# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ecjtu"
version = "0.1.2"
description = "ECJTU API SDK service"
readme = "README.md"
authors = ["ecjtu <zeeland4work@gmail.com>"]
license = "MIT"
repository = "https://github.com/Undertone0809/ecjtu"
homepage = "https://github.com/Undertone0809/ecjtu"
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"ecjtu" = "ecjtu.__main__:main"

[tool.poetry.dependencies]
python = ">=3.8"
urllib3 = "1.26.18"
pyopenssl = "24.1.0"
beautifulsoup4 = "4.12.3"
pydantic = ">=2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-html = "^3.1.1"
pytest-cov = "^3.0.0"
ruff = "^0.1.6"
pre-commit = "^2.21.0"
coverage = "^6.1.2"
coverage-badge = "^1.1.0"


[tool.ruff]
# https://beta.ruff.rs/docs/settings/
# https://docs.astral.sh/ruff/configuration/
line-length = 88

# https://beta.ruff.rs/docs/rules/
select = ["E", "W", "F", "I"]
extend-select = ["I"]
ignore = ["F401"]

# Exclude a variety of commonly ignored directories.
respect-gitignore = true
ignore-init-module-imports = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "ecjtu"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
